implemented api for deletion of tables
